--- a/package.json
+++ b/package.json
@@ -39,17 +39,21 @@
   "devDependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
+    "dotenv": "^16.0.3",
     "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
     "express-validator": "^6.15.0",
     "husky": "^8.0.3",
     "jsdom": "^21.1.0",
+    "jsonwebtoken": "^9.0.0",
     "lint-staged": "^13.1.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.1.2",
     "node-sass": "^8.0.0",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.4",
+    "rand-token": "^1.0.1",
+    "sass": "^1.58.3",
     "sequelize": "^6.28.1"
   }
 }
